# GBMuntrig

./: Makefile.am  Makefile.in  README  configure  configure.ac
fits_template/: untrigdat.txt
src/: gbmCont2UnTrig.cpp
src/src2/: DataRecorder.hh  EdgeSet.hh  Gbm_PositionIO.cpp  Gbm_PositionIO.h  GeoTransform.cpp  GeoTransform.h  PHA2_IO.cpp  PHA2_IO.hh  PHAStructures.hh  PHA_IO.cpp  PHA_IO.hh  TTE_IO.cpp  TTE_IO.hh  TTEventTable.hh  algorithms_t.cpp  algorithms_t.h  gbm_geometry.cpp  gbm_geometry.hh  spoccExeUtilities.cpp
